<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title = "@string/general_statistics_title"
        android:id="@+id/general_statistics"
        android:orderInCategory="100"
    />

    <item android:title = "@string/year_statistics_title"
        android:id="@+id/year_statistics"
        android:orderInCategory="100"
        />

    <item android:title = "@string/month_statistics_title"
        android:id="@+id/month_statistics"
        android:orderInCategory="100"
        />

    <item android:title = "@string/day_statistics_title"
        android:id="@+id/day_statistics"
        android:orderInCategory="100"
        />

    <item android:title = "@string/custom_period_title"
        android:id="@+id/custom_statistics"
        android:orderInCategory="100"
        />

    <item android:title = "@string/download_csv"
        android:id="@+id/csv"
        android:orderInCategory="100"
        />
    <item android:title="@string/language_settings"
        android:id="@+id/setting"
        android:orderInCategory="100" />

</menu>