<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LanguageSettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_margin"
            android:layout_marginTop="@dimen/activity_margin"
            android:text="@string/language"
            android:textSize="@dimen/activity_text_size_1" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:id="@+id/radioGroup"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioButtonItalian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_margin"
                android:layout_marginTop="@dimen/activity_margin"
                android:text="@string/italian"
                android:textSize="@dimen/activity_text_size_2" />

            <RadioButton
                android:id="@+id/radioButtonEnglish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_margin"
                android:layout_marginTop="@dimen/activity_margin"
                android:text="@string/english"
                android:textSize="@dimen/activity_text_size_2" />
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/activity_margin"
        android:text="@string/save" />

</RelativeLayout>