<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MonthStatisticsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/buttonLastMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/activity_margin"
            android:layout_marginRight="@dimen/activity_margin"
            android:text="@string/last_month" />

        <Button
            android:id="@+id/buttonNextMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_margin"
            android:layout_weight="1"
            android:text="@string/next_month" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtViewMonth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="@dimen/activity_text_size_1"
        android:textColor="@color/black"
        android:text="@string/month" />
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView3">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

    <TextView
        android:id="@+id/textViewNumberExpenses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/activity_text_size_2"
        android:text="@string/no_expenses" />


    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/pie_chart"
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="@dimen/pie_chart_height"/>

</LinearLayout>
    </ScrollView>

    <ListView
        android:id="@+id/expenses_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></ListView>


</LinearLayout>