<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddExpenseActivity">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin"
            android:layout_marginLeft="@dimen/activity_margin"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="@dimen/activity_text_size_1"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginLeft="@dimen/activity_margin"
            android:inputType="textCapSentences"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin"
            android:layout_marginLeft="@dimen/activity_margin"
            android:text="@string/category"
            android:textColor="@color/black"
            android:textSize="@dimen/activity_text_size_1"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin"
            android:layout_marginLeft="@dimen/activity_margin"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin"
            android:layout_marginLeft="@dimen/activity_margin"
            android:text="@string/amount"
            android:textColor="@color/black"
            android:textSize="@dimen/activity_text_size_1"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:layout_marginLeft="@dimen/activity_margin"
            android:inputType="number" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin"
            android:layout_marginLeft="@dimen/activity_margin"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textSize="@dimen/activity_text_size_1"
            android:textStyle="bold" />

        <DatePicker
            android:id="@+id/simpleDatePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"
            android:layout_marginLeft="@dimen/activity_margin"
            android:datePickerMode="spinner" />


    </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"
        android:text="@string/save" />

</RelativeLayout>