<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SetCustomStatisticActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/activity_text_size_1"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/activity_margin"
            android:text="@string/period_statistics_from" />

        <DatePicker
            android:id="@+id/startDatePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"
            android:layout_gravity="center_horizontal"

            android:datePickerMode="spinner" />

        <TextView
            android:id="@+id/textViewEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/activity_text_size_1"
            android:textColor="@color/black"
            android:text="@string/period_statistics_to" />

        <DatePicker
            android:id="@+id/endDatePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"
            android:layout_gravity="center_horizontal"
            android:datePickerMode="spinner" />

        <Button
            android:id="@+id/buttonCustomPeriod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin"
            android:layout_gravity="center_horizontal"
            android:text="@string/view_statistics" />

    </LinearLayout>
    </ScrollView>


</RelativeLayout>